Ajout des images WEBP pour avoir une meilleure accessibilité.

--- a/projects/loasis/index.html
+++ b/projects/loasis/index.html
@@ -57,10 +57,16 @@
         <h2>Animation Multimédia</h2>
         <h1 class="project__title">L’oasis</h1>
         <div class="hero__bgi">
-          <img
-            src="../../images/projet4-cover.jpg"
-            alt="Couverture du premier projet"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet4-cover.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet4-cover.jpg"
+              alt="Couverture du quatrième projet"
+            />
+          </picture>
         </div>
       </section>
 
@@ -75,25 +81,49 @@
             façons, tout en ayant un visuel agréable.
           </p>
           <div class="gallery">
-            <img
-              src="../../images/projet4-description1.png"
-              alt="Croquis du personnage principal"
-            />
-            <img
-              src="../../images/projet4-description2.png"
-              alt="Tenu d'été du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet4-description3.png"
-              alt="Tenu d'automne du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet4-description4.png"
-              alt="Tenu d'hiver du personnage principal"
-              class="small__img"
-            />
+            <picture>
+              <source
+                srcset="../../images/projet4-description1.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet4-description1.png"
+                alt="Image finale du projet"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet4-description2.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet4-description2.png"
+                alt="Une image du scénarimage"
+                class="small__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet4-description3.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet4-description3.png"
+                alt="Personnage principle court dans le désert"
+                class="small__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet4-description4.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet4-description4.png"
+                alt="Image de la scène"
+                class="small__img"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -104,10 +134,17 @@
     <div class="site-container">
       <section class="project__skills">
         <div class="wrapper skills_medias">
-          <img
-            src="../../images/projet4-skills.png"
-            alt="Image du projet Blender"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet4-skills.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet4-skills.png"
+              alt="Image du projet Blender"
+            />
+          </picture>
+
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
@@ -147,7 +184,7 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube-nocookie.com/embed/lpHiz5E6Txg?vq=hd1080&rel=0&color=white"
+        src="https://www.youtube.com/embed/lpHiz5E6Txg?vq=hd1080&rel=0&color=white"
         width="560"
         height="315"
         title="A YouTube video"
