--- a/projects/lumifest/index.html
+++ b/projects/lumifest/index.html
@@ -57,10 +57,16 @@
         <h2>Animation 2D</h2>
         <h1 class="project__title">Lumifest</h1>
         <div class="hero__bgi">
-          <img
-            src="../../images/projet5-cover.jpg"
-            alt="Couverture du premier projet"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet5-cover.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet5-cover.jpg"
+              alt="Couverture du cinquième projet"
+            />
+          </picture>
         </div>
       </section>
 
@@ -75,25 +81,49 @@
             événement.
           </p>
           <div class="gallery">
-            <img
-              src="../../images/projet5-description1.png"
-              alt="Croquis du personnage principal"
-            />
-            <img
-              src="../../images/projet5-description2.png"
-              alt="Tenu d'été du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet5-description3.png"
-              alt="Tenu d'automne du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet5-description4.png"
-              alt="Tenu d'hiver du personnage principal"
-              class="small__img"
-            />
+            <picture>
+              <source
+                srcset="../../images/projet5-description1.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet5-description1.png"
+                alt="Milieux de travail"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet5-description2.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet5-description2.png"
+                alt="Structure du projet"
+                class="small__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet5-description3.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet5-description3.png"
+                alt="Animation des lettres"
+                class="small__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet5-description4.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet5-description4.png"
+                alt="Projection au Lumifest"
+                class="small__img"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -104,10 +134,16 @@
     <div class="site-container">
       <section class="project__skills">
         <div class="wrapper skills_medias">
-          <img
-            src="../../images/projet5-skills.png"
-            alt="Image du projet Blender"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet5-skills.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet5-skills.png"
+              alt="Image du projet After Effects"
+            />
+          </picture>
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
@@ -138,7 +174,7 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube-nocookie.com/embed/5rJ92sN98Lk?vq=hd1080&rel=0&color=white"
+        src="https://www.youtube.com/embed/5rJ92sN98Lk?vq=hd1080&rel=0&color=white"
         width="560"
         height="315"
         title="A YouTube video"
