--- a/projects/mia-dans-lautobus/index.html
+++ b/projects/mia-dans-lautobus/index.html
@@ -57,10 +57,16 @@
         <h2>Animation 3D</h2>
         <h1 class="project__title">Mia dans l’autobus</h1>
         <div class="hero__bgi">
-          <img
-            src="../../images/projet1-cover.jpg"
-            alt="Couverture du premier projet"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet1-cover.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet1-cover.jpg"
+              alt="Couverture du premier projet"
+            />
+          </picture>
         </div>
       </section>
       <!-- Code du Timer trouvé sur tutorialsplane.com et adapté selon les besoins : https://www.tutorialsplane.com/jquery-redirect-page-seconds-button-click/ -->
@@ -75,26 +81,50 @@
             tout le décor l’entourant.
           </p>
           <div class="gallery">
-            <img
-              src="../../images/projet1-description1.png"
-              alt="Croquis du personnage principal"
-              class="large__img"
-            />
-            <img
-              src="../../images/projet1-description2.png"
-              alt="Tenu d'été du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet1-description3.png"
-              alt="Tenu d'automne du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet1-description4.png"
-              alt="Tenu d'hiver du personnage principal"
-              class="small__img"
-            />
+            <picture>
+              <source
+                srcset="../../images/projet1-description1.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet1-description1.png"
+                alt="Croquis du personnage principal"
+                class="large__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet1-description2.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet1-description2.png"
+                alt="Tenu d'été du personnage principal"
+                class="small__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet1-description3.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet1-description3.png"
+                alt="Tenu d'automne du personnage principal"
+                class="small__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet1-description4.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet1-description4.png"
+                alt="Tenu d'hiver du personnage principal"
+                class="small__img"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -105,10 +135,16 @@
     <div class="site-container">
       <section class="project__skills">
         <div class="wrapper skills_medias">
-          <img
-            src="../../images/projet1-skills.jpg"
-            alt="Image du projet Blender"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet1-skills.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet1-skills.jpg"
+              alt="Image du projet Blender"
+            />
+          </picture>
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
@@ -155,7 +191,7 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube-nocookie.com/embed/W3Mt_KUi2LE?vq=hd1080&rel=0&color=white"
+        src="https://www.youtube.com/embed/W3Mt_KUi2LE?vq=hd1080&rel=0&color=white"
         width="560"
         height="315"
         title="A YouTube video"
