--- a/projects/robot-a-montreal/index.html
+++ b/projects/robot-a-montreal/index.html
@@ -57,10 +57,16 @@
         <h2>Animation Multimédia</h2>
         <h1 class="project__title">Robot à Montréal</h1>
         <div class="hero__bgi">
-          <img
-            src="../../images/projet2-cover.jpg"
-            alt="Couverture du deuxième projet"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet2-cover.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet2-cover.jpg"
+              alt="Couverture du deuxième projet"
+            />
+          </picture>
         </div>
       </section>
 
@@ -75,25 +81,49 @@
             sur le web.
           </p>
           <div class="gallery">
-            <img
-              src="../../images/projet2-description1.jpg"
-              alt="Croquis du personnage principal"
-            />
-            <img
-              src="../../images/projet2-description2.jpg"
-              alt="Tenu d'été du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet2-description3.jpg"
-              alt="Tenu d'automne du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet2-description4.jpg"
-              alt="Tenu d'hiver du personnage principal"
-              class="small__img"
-            />
+            <picture>
+              <source
+                srcset="../../images/projet2-description1.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet2-description1.jpg"
+                alt="Image du robot"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet2-description2.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet2-description2.jpg"
+                alt="Premier croquis du robot"
+                class="small__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet2-description3.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet2-description3.jpg"
+                alt="Deuxième croquis du robot"
+                class="small__img"
+              />
+            </picture>
+            <picture>
+              <source
+                srcset="../../images/projet2-description4.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet2-description4.jpg"
+                alt="Troisième croquis du robot"
+                class="small__img"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -104,10 +134,17 @@
     <div class="site-container">
       <section class="project__skills">
         <div class="wrapper skills_medias">
-          <img
-            src="../../images/projet2-skills.jpg"
-            alt="Image du projet Blender"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet2-skills.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet2-skills.jpg"
+              alt="Image du projet Blender"
+            />
+          </picture>
+
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
@@ -153,7 +190,7 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube-nocookie.com/embed/bibMXgY5duE?vq=hd1080&rel=0&color=white"
+        src="https://www.youtube.com/embed/bibMXgY5duE?vq=hd1080&rel=0&color=white"
         width="560"
         height="315"
         title="L'Attaque du Robot"
