--- a/projects/salon-mpa/index.html
+++ b/projects/salon-mpa/index.html
@@ -57,10 +57,16 @@
         <h2>Mouvement québécois de la qualité</h2>
         <h1 class="project__title">Salon MPA</h1>
         <div class="hero__bgi">
-          <img
-            src="../../images/projet3-cover.jpg"
-            alt="Couverture du troisième projet"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet3-cover.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet3-cover.jpg"
+              alt="Couverture du troisième projet"
+            />
+          </picture>
         </div>
       </section>
 
@@ -75,25 +81,43 @@
             d’animations 3D.
           </p>
           <div class="gallery">
-            <img
-              src="../../images/projet3-description1.png"
-              alt="Croquis du personnage principal"
-            />
-            <img
-              src="../../images/projet3-description2.png"
-              alt="Tenu d'été du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet3-description3.png"
-              alt="Tenu d'automne du personnage principal"
-              class="small__img"
-            />
-            <img
-              src="../../images/projet3-description4.png"
-              alt="Tenu d'hiver du personnage principal"
-              class="small__img"
-            />
+            <picture>
+              <source
+                srcset="../../images/projet3-description1.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet3-description1.png"
+                alt="Mise en scène"
+              />
+            </picture>
+            <picture class="small__img">
+              <source
+                srcset="../../images/projet3-description2.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet3-description2.png"
+                alt="Animtion du numéro 30"
+              />
+            </picture>
+            <picture class="small__img">
+              <source
+                srcset="../../images/projet3-description3.webp"
+                type="image/webp"
+              />
+              <img src="../../images/projet3-description3.png" alt="Rubans" />
+            </picture>
+            <picture class="small__img">
+              <source
+                srcset="../../images/projet3-description4.webp"
+                type="image/webp"
+              />
+              <img
+                src="../../images/projet3-description4.png"
+                alt="Animation des rubans"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -104,10 +128,16 @@
     <div class="site-container">
       <section class="project__skills">
         <div class="wrapper skills_medias">
-          <img
-            src="../../images/projet3-skills.png"
-            alt="Image du projet Blender"
-          />
+          <picture>
+            <source
+              srcset="../../images/projet3-skills.webp"
+              type="image/webp"
+            />
+            <img
+              src="../../images/projet3-skills.png"
+              alt="Image du projet Blender"
+            />
+          </picture>
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
@@ -145,7 +175,7 @@
 
     <section class="project__final">
       <iframe
-        src="https://www.youtube-nocookie.com/embed/sflCpfYE-cY?vq=hd1080&rel=0&color=white"
+        src="https://www.youtube.com/embed/sflCpfYE-cY?vq=hd1080&rel=0&color=white"
         width="560"
         height="315"
         title="A YouTube video"
