--- a/about/index.html
+++ b/about/index.html
@@ -39,21 +39,6 @@
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
     </script>
 
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-BRXKELD0P6"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-BRXKELD0P6");
-    </script>
-
     <!-- SWUP librairie : https://swup.js.org/getting-started -->
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
 
@@ -94,11 +79,16 @@
           <section class="hero">
             <div class="wrapper about__hero__content">
               <div class="about__hero">
-                <img
-                  src="../images/about-alanisbedard.png"
-                  alt="Photo d'Alanis Bédard"
-                  class="about__picture"
-                />
+                <picture class="about__picture">
+                  <source
+                    srcset="../images/about-alanisbedard.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="../images/about-alanisbedard.png"
+                    alt="Photo d'Alanis Bédard"
+                  />
+                </picture>
                 <div class="about_alanisbedard">
                   <h1>
                     Alanis Bédard
@@ -250,7 +240,7 @@
             <div class="wrapper">
               <h3>Vidéo de présentation</h3>
               <iframe
-                src="https://www.youtube-nocookie.com/embed/doe-TSPP8bg?vq=hd1080&rel=0&color=white"
+                src="https://www.youtube.com/embed/doe-TSPP8bg?vq=hd1080&rel=0&color=white"
                 width="100%"
                 height="500px"
                 title="Présentation d'Alanis Bédard"
