--- a/projects/index.html
+++ b/projects/index.html
@@ -110,10 +110,16 @@
               >En savoir plus</a
             >
             <div class="hero__bgi animation__lazy">
-              <img
-                src="../images/projet1-cover.jpg"
-                alt="Couverture du premier projet"
-              />
+              <picture>
+                <source
+                  srcset="../images/projet1-cover.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="../images/projet1-cover.jpg"
+                  alt="Couverture du premier projet"
+                />
+              </picture>
             </div>
           </div>
           <div class="swiper-slide">
@@ -127,10 +133,16 @@
               >En savoir plus</a
             >
             <div class="hero__bgi animation__lazy">
-              <img
-                src="../images/projet2-cover.jpg"
-                alt="Couverture du deuxième projet"
-              />
+              <picture>
+                <source
+                  srcset="../images/projet2-cover.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="../images/projet2-cover.jpg"
+                  alt="Couverture du deuxième projet"
+                />
+              </picture>
             </div>
           </div>
           <div class="swiper-slide">
@@ -142,10 +154,16 @@
               >En savoir plus</a
             >
             <div class="hero__bgi animation__lazy">
-              <img
-                src="../images/projet3-cover.jpg"
-                alt="Couverture du troisième projet"
-              />
+              <picture>
+                <source
+                  srcset="../images/projet3-cover.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="../images/projet3-cover.jpg"
+                  alt="Couverture du troisième projet"
+                />
+              </picture>
             </div>
           </div>
           <div class="swiper-slide">
@@ -157,10 +175,16 @@
               >En savoir plus</a
             >
             <div class="hero__bgi animation__lazy">
-              <img
-                src="../images/projet4-cover.jpg"
-                alt="Couverture du quatrième projet"
-              />
+              <picture>
+                <source
+                  srcset="../images/projet4-cover.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="../images/projet4-cover.jpg"
+                  alt="Couverture du quatrième projet"
+                />
+              </picture>
             </div>
           </div>
           <div class="swiper-slide">
@@ -170,10 +194,16 @@
               >En savoir plus</a
             >
             <div class="hero__bgi animation__lazy">
-              <img
-                src="../images/projet5-cover.jpg"
-                alt="Couverture du cinquième projet"
-              />
+              <picture>
+                <source
+                  srcset="../images/projet5-cover.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="../images/projet5-cover.jpg"
+                  alt="Couverture du cinquième projet"
+                />
+              </picture>
             </div>
           </div>
         </div>
