--- a/404.html
+++ b/404.html
@@ -21,117 +21,108 @@
       rel="stylesheet"
     />
 
-    <!-- SWUP librairie : https://swup.js.org/getting-started -->
-    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
-
     <script type="module" src="/js/Main.js" defer></script>
   </head>
 
   <body>
-    <div id="swup" data-component="Swup">
-      <div class="site-container">
-        <header
-          class="header"
-          data-component="Header"
-          data-header="scrollLimit"
-        >
-          <div class="wrapper_nav header__style">
-            <a href="/" class="brand">
-              <img src="/svg/logo.svg" alt="Logo Alanis Bédard"
-            /></a>
+    <div class="site-container">
+      <header class="header" data-component="Header" data-header="scrollLimit">
+        <div class="wrapper_nav header__style">
+          <a href="/" class="brand">
+            <img src="/svg/logo.svg" alt="Logo Alanis Bédard"
+          /></a>
 
-            <nav>
-              <ul class="nav_main">
-                <div class="nav__animation">
-                  <li><a href="/">Accueil</a></li>
-                  <li><a href="/about/">À propos</a></li>
-                  <li><a href="/projects/">Projets</a></li>
-                </div>
-                <li>
-                  <a href="/contact/">
-                    <img src="/svg/letter.svg" alt="Logo de contact"
-                  /></a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </header>
-
-        <section class="hero transition-fade animation__page">
-          <div class="wrapper_demo not-found">
-            <h1>Cette page n'existe pas.</h1>
-
-            <p>
-              N'hésitez pas à explorer ma page de mes projets ou à me contacter!
-            </p>
-            <a href="/projects/" class="button">Mes projets</a>
-          </div>
-        </section>
-
-        <footer>
-          <div class="wrapper footer__style">
-            <span class="line"></span>
-            <ul class="socials">
+          <nav>
+            <ul class="nav_main">
+              <div class="nav__animation">
+                <li><a href="/">Accueil</a></li>
+                <li><a href="/about/">À propos</a></li>
+                <li><a href="/projects/">Projets</a></li>
+              </div>
               <li>
-                <a
-                  href="https://www.linkedin.com/in/alanisbedard/"
-                  target="_blank"
-                >
-                  <img
-                    class="social_icon"
-                    src="/svg/social-linkedin.svg"
-                    alt="Le LinkedIn d'Alanis Bédard"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.behance.net/alanisbedard" target="_blank"
-                  ><img
-                    class="social_icon"
-                    src="/svg/social-behance.svg"
-                    alt="Le Behance d'Alanis Bédard"
-                /></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.instagram.com/alanisbedard/?hl=fr"
-                  target="_blank"
-                >
-                  <img
-                    class="social_icon"
-                    src="/svg/social-instagram.svg"
-                    alt="L'Instagram d'Alanis Bédard"
-                /></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
-                  target="_blank"
-                  ><img
-                    class="social_icon"
-                    src="/svg/social-youtube.svg"
-                    alt="La chaîne Youtube d'Alanis Bédard"
-                /></a>
-              </li>
-              <li>
-                <a href="https://github.com/AlanisBedard" target="_blank">
-                  <img
-                    class="social_icon"
-                    src="/svg/social-github.svg"
-                    alt="Le GitHub d'Alanis Bédard"
-                /></a>
-              </li>
-              <li>
-                <a href="https://sketchfab.com/alanisbedard" target="_blank"
-                  ><img
-                    class="social_icon"
-                    src="/svg/social-sketchfab.svg"
-                    alt="Le Sketchfab d'Alanis Bédard"
+                <a href="/contact/">
+                  <img src="/svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
             </ul>
-          </div>
-        </footer>
-      </div>
+          </nav>
+        </div>
+      </header>
+
+      <section class="hero animation__page">
+        <div class="wrapper_demo not-found">
+          <h1>Cette page n'existe pas.</h1>
+
+          <p>
+            N'hésitez pas à explorer ma page de mes projets ou à me contacter!
+          </p>
+          <a href="/projects/" class="button">Mes projets</a>
+        </div>
+      </section>
+
+      <footer>
+        <div class="wrapper footer__style">
+          <span class="line"></span>
+          <ul class="socials">
+            <li>
+              <a
+                href="https://www.linkedin.com/in/alanisbedard/"
+                target="_blank"
+              >
+                <img
+                  class="social_icon"
+                  src="/svg/social-linkedin.svg"
+                  alt="Le LinkedIn d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.behance.net/alanisbedard" target="_blank"
+                ><img
+                  class="social_icon"
+                  src="/svg/social-behance.svg"
+                  alt="Le Behance d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/alanisbedard/?hl=fr"
+                target="_blank"
+              >
+                <img
+                  class="social_icon"
+                  src="/svg/social-instagram.svg"
+                  alt="L'Instagram d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+                target="_blank"
+                ><img
+                  class="social_icon"
+                  src="/svg/social-youtube.svg"
+                  alt="La chaîne Youtube d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://github.com/AlanisBedard" target="_blank">
+                <img
+                  class="social_icon"
+                  src="/svg/social-github.svg"
+                  alt="Le GitHub d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://sketchfab.com/alanisbedard" target="_blank"
+                ><img
+                  class="social_icon"
+                  src="/svg/social-sketchfab.svg"
+                  alt="Le Sketchfab d'Alanis Bédard"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
