Correction de textes et modification d'une animation css.

--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
                     class="about__signature"
                   />
                 </h1>
-                <h2>Intégratice multimédia</h2>
+                <h2>Intégratrice multimédia</h2>
                 <p>
                   Passionnée par l'univers des jeux vidéo et de l'art numérique,
                   j'étudie au programme Techniques d'intégration multimédia pour
