--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     class="signature"
                   />
                 </h1>
-                <h2>Intégratice multimédia</h2>
+                <h2>Intégratrice multimédia</h2>
               </div>
 
               <a href="/projects/" class="button">Mes projets</a>
