Modification de certaines informations dans le site.

--- a/projects/index.html
+++ b/projects/index.html
@@ -188,7 +188,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <h2 class="project__title_kind animation__lazy">Montage vidéo</h2>
+            <h2 class="project__title_kind animation__lazy">Animation 2D</h2>
             <h2 class="project__title animation__lazy">Lumifest</h2>
             <a href="/projects/lumifest/" class="button__small animation__fade"
               >En savoir plus</a
