--- a/about/index.html
+++ b/about/index.html
@@ -232,7 +232,7 @@
           <div class="wrapper">
             <h3>Vidéo de présentation</h3>
             <iframe
-              src="https://www.youtube.com/embed/doe-TSPP8bg?vq=hd1080&rel=0&color=white"
+              src="https://www.youtube.com/embed/kaAzGiNZzFU?vq=hd1080&rel=0&color=white"
               width="100%"
               height="500px"
               title="Présentation d'Alanis Bédard"
