Modifications pour les pages HTML aidant à l'accessibilité.

--- a/index.html
+++ b/index.html
@@ -65,18 +65,16 @@
           /></a>
 
           <nav>
-            <ul class="nav_main">
-              <div class="nav__animation">
+            <div class="nav_main">
+              <ul class="nav__animation">
                 <li><a href="#">Accueil</a></li>
                 <li><a href="/about/">À propos</a></li>
                 <li><a href="/projects/">Projets</a></li>
-              </div>
-              <li>
-                <a href="/contact/"
-                  ><img src="/svg/letter.svg" alt="Logo de contact"
-                /></a>
-              </li>
-            </ul>
+              </ul>
+              <a href="/contact/"
+                ><img src="/svg/letter.svg" alt="Logo de contact"
+              /></a>
+            </div>
           </nav>
         </div>
       </header>
