--- a/projects/salon-mpa/index.html
+++ b/projects/salon-mpa/index.html
@@ -32,25 +32,21 @@
             ><img src="../../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
-          <nav>
-            <ul class="nav_main">
-              <div class="nav__animation">
-                <li><a href="/">Accueil</a></li>
-                <li><a href="/about/">À propos</a></li>
-                <li><a href="/projects/">Projets</a></li>
-              </div>
-              <li>
-                <a href="/contact/"
-                  ><img src="../../svg/letter.svg" alt="Logo de contact"
-                /></a>
-              </li>
+          <nav class="nav_main">
+            <ul class="nav__animation">
+              <li><a href="/">Accueil</a></li>
+              <li><a href="/about/">À propos</a></li>
+              <li><a href="/projects/">Projets</a></li>
             </ul>
+            <a href="/contact/"
+              ><img src="../../svg/letter.svg" alt="Logo de contact"
+            /></a>
           </nav>
         </div>
       </header>
 
       <div class="button__back" data-component="Links" data-page="2">
-        <a href="#top"></a>
+        <a href="#top">Retour</a>
       </div>
 
       <section class="project__hero animation__project">
