--- a/about/index.html
+++ b/about/index.html
@@ -50,19 +50,15 @@
             ><img src="../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
-          <nav>
-            <ul class="nav_main">
-              <div class="nav__animation">
-                <li><a href="/">Accueil</a></li>
-                <li><a href="#">À propos</a></li>
-                <li><a href="/projects/">Projets</a></li>
-              </div>
-              <li>
-                <a href="/contact/"
-                  ><img src="/svg/letter.svg" alt="Logo de contact"
-                /></a>
-              </li>
+          <nav class="nav_main">
+            <ul class="nav__animation">
+              <li><a href="/">Accueil</a></li>
+              <li><a href="#">À propos</a></li>
+              <li><a href="/projects/">Projets</a></li>
             </ul>
+            <a href="/contact/"
+              ><img src="/svg/letter.svg" alt="Logo de contact"
+            /></a>
           </nav>
         </div>
       </header>
