--- a/contact/index.html
+++ b/contact/index.html
@@ -65,19 +65,15 @@
             ><img src="../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
-          <nav>
-            <ul class="nav_main">
-              <div class="nav__animation">
-                <li><a href="/">Accueil</a></li>
-                <li><a href="/about/">À propos</a></li>
-                <li><a href="/projects/">Projets</a></li>
-              </div>
-              <li>
-                <a href="#"
-                  ><img src="../svg/letter.svg" alt="Logo de contact"
-                /></a>
-              </li>
+          <nav class="nav_main">
+            <ul class="nav__animation">
+              <li><a href="/">Accueil</a></li>
+              <li><a href="/about/">À propos</a></li>
+              <li><a href="/projects/">Projets</a></li>
             </ul>
+            <a href="#"
+              ><img src="../svg/letter.svg" alt="Logo de contact"
+            /></a>
           </nav>
         </div>
       </header>
@@ -113,7 +109,7 @@
                     class="input__element"
                     type="text"
                     name="nom"
-                    id="name"
+                    id="nom"
                     placeholder="Prénom Nom"
                     required
                   />
@@ -138,8 +134,9 @@
                     class="input__element input_textarea"
                     name="message"
                     maxlength="500"
-                    id="comment"
+                    id="message"
                     placeholder=" "
+                    required
                   ></textarea>
                 </div>
                 <button class="button reset-style_button">Soumettre</button>
