--- a/projects/index.html
+++ b/projects/index.html
@@ -70,23 +70,19 @@
             ><img src="../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
-          <nav>
-            <ul class="nav_main">
-              <div class="nav__animation">
-                <li><a href="/">Accueil</a></li>
-                <li>
-                  <a href="/about/">À propos</a>
-                </li>
-                <li>
-                  <h1 class="project__page"><a href="#">Projets</a></h1>
-                </li>
-              </div>
+          <nav class="nav_main">
+            <ul class="nav__animation">
+              <li><a href="/">Accueil</a></li>
               <li>
-                <a href="/contact/"
-                  ><img src="../svg/letter.svg" alt="Logo de contact"
-                /></a>
+                <a href="/about/">À propos</a>
+              </li>
+              <li>
+                <h1 class="project__page"><a href="#">Projets</a></h1>
               </li>
             </ul>
+            <a href="/contact/"
+              ><img src="../svg/letter.svg" alt="Logo de contact"
+            /></a>
           </nav>
         </div>
       </header>
