Ajout d'un 6ieme projet et modifier des titres de pages HTML.

--- a/projects/biscuits/index.html
+++ b/projects/biscuits/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet - Lumifest</title>
+    <title>Projet - Biscuits</title>
 
     <meta
       name="description"
-      content="Portfolio - Alanis Bédard. Projet d'animation 2D. Dans l'oeil de la projection."
+      content="Portfolio - Alanis Bédard. Projet de design et web. Visitez le site web Biscuits!"
     />
 
     <link rel="icon" type="image/x-icon" href="../../svg/favicon.svg" />
@@ -45,22 +45,22 @@
         </div>
       </header>
 
-      <div class="button__back" data-component="Links" data-page="4">
+      <div class="button__back" data-component="Links" data-page="5">
         <a href="#top">Retour</a>
       </div>
 
       <section class="project__hero animation__project">
-        <h2>Animation 2D</h2>
-        <h1 class="project__title">Lumifest</h1>
+        <h2>Design et développement web</h2>
+        <h1 class="project__title">Biscuits</h1>
         <div class="hero__bgi">
           <picture>
             <source
-              srcset="../../images/projet5-cover.webp"
+              srcset="../../images/projet6-cover.webp"
               type="image/webp"
             />
             <img
-              src="../../images/projet5-cover.jpg"
-              alt="Couverture du cinquième projet"
+              src="../../images/projet6-cover.jpg"
+              alt="Couverture du quatrième projet"
             />
           </picture>
         </div>
@@ -70,53 +70,57 @@
         <div class="wrapper">
           <h3>Description</h3>
           <p>
-            Ce projet fait dans le cadre de mon cours de montage vidéo devait
-            être animé ou monté au rythme d’une musique de notre choix. Ces
-            vidéos étaient, par la suite, envoyées aux organisateurs du Lumifest
-            2022. Mon animation fut choisie pour être projetée lors de cet
-            événement.
+            Ce projet m’a permis de créer un site web dans son entièreté. J’ai
+            d’abord créé le design, le style et les icônes des deux pages, sans
+            oublier l’aspect UX du site. Après avoir balancé le beau et l’utile,
+            j’ai programmé le site en HTML, SCSS et JavaScript. Ce site inclut
+            aussi un formulaire fictif possédant des labels flottants qui furent
+            un beau défi.
+            <a href="https://biscuits-choco.netlify.app/" target="_blank"
+              >Visitez le site web dès maintenant!</a
+            >
           </p>
           <div class="gallery">
             <picture>
               <source
-                srcset="../../images/projet5-description1.webp"
+                srcset="../../images/projet6-description1.webp"
                 type="image/webp"
               />
               <img
-                src="../../images/projet5-description1.png"
-                alt="Milieux de travail"
+                src="../../images/projet6-description1.png"
+                alt="Image finale du projet"
               />
             </picture>
             <picture>
               <source
-                srcset="../../images/projet5-description2.webp"
+                srcset="../../images/projet6-description2.webp"
                 type="image/webp"
               />
               <img
-                src="../../images/projet5-description2.png"
-                alt="Structure du projet"
+                src="../../images/projet6-description2.png"
+                alt="Une image du scénarimage"
                 class="small__img"
               />
             </picture>
             <picture>
               <source
-                srcset="../../images/projet5-description3.webp"
+                srcset="../../images/projet6-description3.webp"
                 type="image/webp"
               />
               <img
-                src="../../images/projet5-description3.png"
-                alt="Animation des lettres"
+                src="../../images/projet6-description3.png"
+                alt="Personnage principle court dans le désert"
                 class="small__img"
               />
             </picture>
             <picture>
               <source
-                srcset="../../images/projet5-description4.webp"
+                srcset="../../images/projet6-description4.webp"
                 type="image/webp"
               />
               <img
-                src="../../images/projet5-description4.png"
-                alt="Projection au Lumifest"
+                src="../../images/projet6-description4.png"
+                alt="Image de la scène"
                 class="small__img"
               />
             </picture>
@@ -125,40 +129,53 @@
       </section>
     </div>
 
-    <div class="gallery__display display__project5"></div>
+    <div class="gallery__display display__project6"></div>
 
     <div class="site-container">
       <section class="project__skills">
         <div class="wrapper skills_medias">
           <picture>
             <source
-              srcset="../../images/projet5-skills.webp"
+              srcset="../../images/projet6-skills.webp"
               type="image/webp"
             />
             <img
-              src="../../images/projet5-skills.png"
-              alt="Image du projet After Effects"
+              src="../../images/projet6-skills.png"
+              alt="Image du projet Blender"
             />
           </picture>
+
           <div class="skills_infos">
             <h3>Compétences</h3>
             <p>
-              La création de cette animation m’a fait découvrir plusieurs
-              méthodes de travail intéressantes sur After Effects. Les calques
-              d’effets furent une belle découverte, permettant d’ajouter du
-              style aisément à nos compositions. Faire l’animation des bulles
-              dynamiques était aussi très amusant et formatif.
+              Mes habiletés en art et en programmation ont été testées en
+              profondeur tout au long de ce projet. J’ai rencontré plusieurs
+              problèmes en SCSS et JavaScript. Dans toutes ces situations, j’ai
+              trouvé des solutions créatives permettant la meilleure expérience
+              pour l’utilisateur.
             </p>
             <div class="softwares skills_softwares">
               <h3>Logiciels</h3>
               <ul>
                 <li>
-                  <a
-                    href="https://www.adobe.com/ca_fr/products/aftereffects.html"
-                    target="_blank"
+                  <a href="https://procreate.art/" target="_blank"
                     ><img
-                      src="../../svg/software-aftereffect.svg"
-                      alt="Logo du logiciel After Effects"
+                      src="../../svg/software-procreate.svg"
+                      alt="Logo du logiciel Procreate"
+                  /></a>
+                </li>
+                <li>
+                  <a href="https://www.figma.com/fr/" target="_blank"
+                    ><img
+                      src="../../svg/software-figma.svg"
+                      alt="Logo du logiciel Figma"
+                  /></a>
+                </li>
+                <li>
+                  <a href="https://code.visualstudio.com/" target="_blank"
+                    ><img
+                      src="../../svg/software-vscode.svg"
+                      alt="Logo du logiciel Visual Studio Code"
                   /></a>
                 </li>
               </ul>
@@ -169,12 +186,24 @@
     </div>
 
     <section class="project__final">
+      <div class="buttons">
+        <a
+          href="https://biscuits-choco.netlify.app/"
+          class="button"
+          target="_blank"
+          >Visitez le site web</a
+        >
+        <a
+          href="https://github.com/AlanisBedard/Biscuits"
+          class="button"
+          target="_blank"
+          >Voir le projet GitHub</a
+        >
+      </div>
+
       <iframe
-        src="https://www.youtube.com/embed/5rJ92sN98Lk?vq=hd1080&rel=0&color=white"
-        width="560"
-        height="315"
-        title="A YouTube video"
-        frameborder="0"
+        class="figma_embed"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKym8NaNXeBFnPh0hHuHihZ%2Fbiscuits%3Fpage-id%3D616%253A397%26node-id%3D1049%253A1675%26viewport%3D-465%252C-1485%252C0.13%26scaling%3Dscale-down-width%26starting-point-node-id%3D946%253A1675%26hotspot-hints%3D0"
         allowfullscreen
       ></iframe>
     </section>
@@ -183,13 +212,13 @@
       <section class="credits">
         <div class="wrapper">
           <h3>Crédits</h3>
-          <p>Alanis Bédard | Animation et création du visuel</p>
           <p>
-            Komiku | Musique : Hélice's Theme, 2019,
-            <a
-              href="https://chezmonplaisir.bandcamp.com/track/h-lices-theme"
-              target="_blank"
-              >https://chezmonplaisir.bandcamp.com/track/h-lices-theme</a
+            Alanis Bédard | Design et programmation HTML, SCSS et JavaScript
+          </p>
+          <p>
+            Unsplash | Photos,
+            <a href="https://unsplash.com/" target="_blank"
+              >https://unsplash.com/</a
             >
           </p>
         </div>
