--- a/projects/index.html
+++ b/projects/index.html
@@ -202,6 +202,27 @@
               </picture>
             </div>
           </div>
+          <div class="swiper-slide">
+            <h2 class="project__title_kind animation__lazy">
+              Design et développement web
+            </h2>
+            <h2 class="project__title animation__lazy">Biscuits</h2>
+            <a href="/projects/biscuits/" class="button__small animation__fade"
+              >En savoir plus</a
+            >
+            <div class="hero__bgi animation__lazy">
+              <picture>
+                <source
+                  srcset="../images/projet6-cover.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="../images/projet6-cover.jpg"
+                  alt="Couverture du cinquième projet"
+                />
+              </picture>
+            </div>
+          </div>
         </div>
       </div>
 
