--- a/projects/loasis/index.html
+++ b/projects/loasis/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>L’oasis</title>
+    <title>Projet - L’oasis</title>
 
     <meta
       name="description"
@@ -199,23 +199,33 @@
           </p>
           <p>
             jakobscheidt | Gameready Character,
-            <a href="https://skfb.ly/6SEwJ">https://skfb.ly/6SEwJ</a>
+            <a href="https://skfb.ly/6SEwJ" target="_blank"
+              >https://skfb.ly/6SEwJ</a
+            >
           </p>
           <p>
             jakobscheidt | Winter Girl,
-            <a href="https://skfb.ly/6XZ9M">https://skfb.ly/6XZ9M</a>
+            <a href="https://skfb.ly/6XZ9M" target="_blank"
+              >https://skfb.ly/6XZ9M</a
+            >
           </p>
           <p>
             Máté Varga | The Carrier,
-            <a href="https://skfb.ly/oroD7">https://skfb.ly/oroD7 </a>
+            <a href="https://skfb.ly/oroD7" target="_blank"
+              >https://skfb.ly/oroD7
+            </a>
           </p>
           <p>
             Erroratten | Desert - Rocks - Stones - Pack,
-            <a href="https://skfb.ly/op9zQ">https://skfb.ly/op9zQ</a>
+            <a href="https://skfb.ly/op9zQ" target="_blank"
+              >https://skfb.ly/op9zQ</a
+            >
           </p>
           <p>
             Parelaxel | Stylized Palm tree set,
-            <a href="https://skfb.ly/6Y98A">https://skfb.ly/6Y98A</a>
+            <a href="https://skfb.ly/6Y98A" target="_blank"
+              >https://skfb.ly/6Y98A</a
+            >
           </p>
         </div>
       </section>
