--- a/projects/robot-a-montreal/index.html
+++ b/projects/robot-a-montreal/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Robot à Montréal</title>
+    <title>Projet - Robot à Montréal</title>
 
     <meta
       name="description"
@@ -205,12 +205,15 @@
           </p>
           <p>
             Textures réalistes trouvé sur ambientCG |
-            <a href="https://ambientcg.com/">https://ambientcg.com/</a>
+            <a href="https://ambientcg.com/" target="_blank"
+              >https://ambientcg.com/</a
+            >
           </p>
           <p>
             Vidéo par Cottonbro trouvé sur Pexels |
             <a
               href="https://www.pexels.com/video/creepy-clown-extreme-close-up-5427406/"
+              target="_blank"
               >https://www.pexels.com/video/creepy-clown-extreme-close-up-5427406/</a
             >
           </p>
