Modifier les titres des pages, modifier certains styles et modifier le PDF du CV.

--- a/projects/mia-dans-lautobus/index.html
+++ b/projects/mia-dans-lautobus/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet - Mia dans l'autobus</title>
+    <title>Alanis Bédard | Mia dans l'autobus</title>
 
     <meta
       name="description"
