--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>À propos</title>
+    <title>Alanis Bédard | À propos</title>
 
     <meta
       name="description"
@@ -220,21 +220,6 @@
                 >Télécharger ma lettre de recommandation</a
               >
             </div>
-            <span class="line"></span>
-          </div>
-        </section>
-
-        <section class="presentation">
-          <div class="wrapper">
-            <h3>Vidéo de présentation</h3>
-            <iframe
-              src="https://www.youtube.com/embed/kaAzGiNZzFU?vq=hd1080&rel=0&color=white"
-              width="100%"
-              height="500px"
-              title="Présentation d'Alanis Bédard"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
           </div>
         </section>
 
