--- a/projects/loasis/index.html
+++ b/projects/loasis/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet - L’oasis</title>
+    <title>Alanis Bédard | L’oasis</title>
 
     <meta
       name="description"
